Bug 301439. Don't update scrollbars when we do first-pass layout of a listbox. r+sr=dbaron,a=bsmedberg